# poors_man_rekognition

./: .gitignore  README.md  image_pipeline.py  main.py  pipeline_showcase.py  requirements.txt  run_web.py  test_facenet.py  train_face_recognizer.py  train_facenet.py  video_pipeline.py
rekognition/pipeline/: data.py  data_handler.py  face_detector.py  face_recognizer.py  facenet_recognizer.py  handle_video.py  image_handler.py  imageoutput_handler.py  json_elem.py  json_handler.py  kernel.py  mobilenets_ssd.py  output_elem.py  output_handler.py  pipeline.py  pipeline_element.py  video_handler.py  videooutput_handler.py  yolov3_face_detector.py
rekognition/utils/: label_map_util.py  utils.py  visualization_utils_color.py
rekognition/web/: models.py  pipelines.py  views.py
rekognition_cpp/src/: CMakeLists.txt  main.cpp
rekognition_cpp/src/pipeline/: pipeline.cpp  pipeline.h
rekognition_cpp/src/pipeline/pipeline_elements/: pipeline_element.cpp  pipeline_element.h
rekognition_cpp/src/pipeline/pipeline_elements/face_detectors/: face_detector.py  mobilenets_ssd.py  yolov3_face_detector.py
rekognition_cpp/src/pipeline/pipeline_elements/input_handlers/: data_handler.h  image_handler.py  video_handler.cpp  video_handler.h
rekognition_cpp/src/pipeline/pipeline_elements/output_handlers/: imageoutput_handler.py  json_handler.py  output_handler.py  videooutput_handler.py
rekognition_cpp/src/pipeline/pipeline_elements/recognizers/: facenet_recognizer.py
uploads/: 15536121862530.webm  15536313256510.webm
web/: hello.py  main.py  views.py
(+47 files in other folders)
